[package]
name = "ukiyo"
version = "0.1.0"
edition = "2021"

[dependencies]
codespan-reporting = ">=0.11.1"
rand = ">=0.8.5"
regex = "1.10.2"
reqwest = { version = ">=0.11.23", features = ["blocking", "json"] }
rustc-hash = "1.1.0"
serde = { version = ">=1.0.195", features = ["derive"] }
serde_json = ">=1.0.111"
